First Draft Finished

--- a/data/bibliography/bibli.bib
+++ b/data/bibliography/bibli.bib
@@ -1,12 +1,24 @@
 %% This BibTeX bibliography file was created using BibDesk.
 %% http://bibdesk.sourceforge.net/
 
-%% Created for Shangqi at 2017-11-15 19:51:20 +1100 
+%% Created for Shangqi at 2017-11-16 21:58:22 +1100 
 
 
 %% Saved with string encoding Unicode (UTF-8) 
 
 
+
+@article{bloom1970space,
+	Author = {Bloom, Burton H},
+	Date-Added = {2017-11-16 10:57:48 +0000},
+	Date-Modified = {2017-11-16 10:57:48 +0000},
+	Journal = {Communications of the ACM},
+	Number = {7},
+	Pages = {422--426},
+	Publisher = {ACM},
+	Title = {Space/time trade-offs in hash coding with allowable errors},
+	Volume = {13},
+	Year = {1970}}
 
 @misc{apache2017hbase,
 	Author = {Apache},
