--- a/data/literature.tex
+++ b/data/literature.tex
@@ -8,7 +8,8 @@ Decentralised solutions attempt to provide social services through a collection 
 
 {\bf Decentralised OSN in Peer-to-Peer overlays:} PeerSoN \cite{buchegger2009peerson} and Safebook \cite{cutillo2009safebook} build a decentralised social network in Peer-to-Peer (P2P) overlays. Users can store their data in their local device and on the devices of their trusted friends, they consist of two parts: a distributed hash table (DHT) is used provide lookup service to find users and the data they store; and the P2P network offers direct data exchange between users' devices. In these social network, users are granted full privilege to control their data as well as the communication channel over P2P network: they can choose to either establish communication via their real-life trust \cite{cutillo2009safebook}, or the encrypted channel \cite{buchegger2009peerson}.
 
-{\bf Decentralised OSN in outsourced storage:} Diaspora \cite{diaspora2017diaspora} and Confidant \cite{liu2011confidant} create the decentralised social network by decoupling users's data with the SNS. Users are asked for keeping their data in some trusted server, and then, the scheme can generate some data descriptors and use them to request the SNS from existing OSN. Others can read and retrieve the data from trusted server via a valid descriptor and an appropriate access privilege. In comparison, Persona \cite{baden2009persona} allows its user keeping their data in untrusted server by using cryptographic techniques, and Cachet \cite{nilizadeh2012cachet} uses the idea from P2P network to further address the performance issue in decentralised system by introducing social cache over DHT.
+{\bf Decentralised OSN in outsourced storage:} Diaspora \cite{diaspora2017diaspora} and Confidant \cite{liu2011confidant} create the decentralised social network by decoupling users's data with the SNS. Users are asked for keeping their data in some trusted server, and then, the scheme can generate some data descriptors and use them to request the SNS from existing OSN. Others can read and retrieve the data from trusted server via a valid descriptor and an appropriate access privilege. 
+In comparison, Persona \cite{baden2009persona} allows its user keeping their data in untrusted server by using cryptographic techniques, and Cachet \cite{nilizadeh2012cachet} uses the idea from P2P network to further address the performance issue in decentralised system by introducing social cache over DHT.
 
 However, decentralised solutions without cryptography are considered as insufficient approaches for solving the privacy issue of OSN. The reason for it is because of the main purpose of these decentralised solutions is to provide access control by users' preference, and this functionality is overlap with OSN access control settings \cite{narayanan2012critical}. In addition, existing OSN service providers have ability to enforce the access control policy in a better way: For example, it is easier for a centralised OSN service provider to stop crawlers and makes their users' data invisible to search engines. Also, some OSN give ``nudge''  when users intent to reveal their sensitive data \cite{mori2010nudge}, but a decentralised system may not work properly in above cases, because its implementation only needs to fit the protocol but does not consider such details.
 
@@ -17,7 +18,8 @@ Cryptographic solutions protect the sensitive data via encryption, these solutio
 
 {\bf Index Obfuscation:} NOYB \cite{guha2008noyb} stores users' data with untrusted service providers, but the index of these data is obfuscated by cryptographic technique. In this system, authorised users possess a part of secret can recover the real index and personal information associated with specific users while unauthorised users only get a mixture of arbitrary personal data from the crowd. NOYB is able to protect the privacy of user profile but it doesn't work for user relations and interactions. 
 
-{\bf Attribute Based Encryption:} Persona \cite{baden2009persona} uses cryptographic primitive (i.e. Attribute Based Encryption (ABE)) to enforce access control over a group of users in OSN. The ability to associate the attributes of user with a key provides a convenient way for group manager to grant different access privileges to different groups. Users within those groups use the key to access the secret key of group manager as well as his/her sensitive data, so each group's access to the sensitive data is properly restricted, which guarantees the privacy of group manager. In Persona, key revocation is not efficient because it needs to re-issue a new key to all remaining users in the group. To address this issue, Sun et al. \cite{sun2010privacy} and Jahid et al. \cite{jahid2011easier} achieve efficient key revocation by using broadcast encryption.
+{\bf Attribute Based Encryption:} Persona \cite{baden2009persona} uses cryptographic primitive (i.e. Attribute Based Encryption (ABE)) to enforce access control over a group of users in OSN. The ability to associate the attributes of user with a key provides a convenient way for group manager to grant different access privileges to different groups. Users within those groups use the key to access the secret key of group manager as well as his/her sensitive data, so each group's access to the sensitive data is properly restricted, which guarantees the privacy of group manager. 
+In Persona, key revocation is not efficient because it needs to re-issue a new key to all remaining users in the group. To address this issue, Sun et al. \cite{sun2010privacy} and Jahid et al. \cite{jahid2011easier} achieve efficient key revocation by using broadcast encryption.
 
 {\bf Private Social Relationship: } Lockr \cite{tootoonchian2009lockr} separates social relationship from OSN service providers by providing Social Attestation mechanism and Social Access Control Lists. Furthermore, Social Attestation mechanism makes it easier for key revocation as it has a explicit expire date. Another benefit for using Lockr applies proof of knowledge protocol to ensures the non-transferability of sensitive data -- third parties sites cannot abuse these sensitive data because they will not receive the actual identifier of users under the protocol. Some other scheme also proposed private social relationship based on privacy homomorphisms \cite{domingo2008privacy} or Blind Signature \cite{de2012hummingbird}.
  
@@ -40,19 +42,26 @@ Graph Search makes use of users' sensitive data storing on their server to gener
 \subsection{Searchable Symmetric Encryption}
 Searchable Symmetric Encryption (SSE) is  the most well-studied category of searchable encryption, most of the state-of-art SSE schemes provide secure index to guarantee its query efficiency, and have a sounded security definition.
 
-{\bf SSE with Index:} The first SSE scheme is proposed by Song et al. \cite{song2000practical}, but his construction doesn't have an index to accelerate keyword search. However, index based SSE protocols have been proposed to support secure index, each more efficient than its predecessor: The first secure encrypted index was proposed in \cite{goh2003secure}, based on form of forward index, storing for each document a Bloom filter containing all the document's keywords. This allows a single document to be searched in a constant time but requires each document to be checked in turn which gains a search complexity proportional to the number of documents.
+{\bf SSE with Index:} The first SSE scheme is proposed by Song et al. \cite{song2000practical}, but his construction doesn't have an index to accelerate keyword search. However, index based SSE protocols have been proposed to support secure index, each more efficient than its predecessor. 
+The first secure encrypted index was proposed in \cite{goh2003secure}, based on form of forward index, storing for each document a Bloom filter containing all the document's keywords. This allows a single document to be searched in a constant time but requires each document to be checked in turn which gains a search complexity proportional to the number of documents.
 
-Curtmola et al. \cite{curtmola2011searchable} are the first to propose to use inverted-index data structure, storing in a hash table for each keyword, the encrypted IDs of the documents that contain it (while hiding the number of documents matching each keyword), resulting in complexity proportional to the number of matching results, even for searching the whole document collection. However, \cite{curtmola2011searchable} does not support multiple keyword conjunctive queries efficiently; it has complexity proportional to the number of documents matching the most frequent queried keyword. Later, \cite{cash2013highly} presented the OXT protocol, extending \cite{curtmola2011searchable} by adding a `Cross-Tag Set' (XSet) data structure, which lists hashed pairs of keywords and IDs of documents containing them, and reducing search complexity to be proportional to the number of results matching the least frequent queried keyword.
+Curtmola et al. \cite{curtmola2011searchable} are the first to propose to use inverted-index data structure, storing in a hash table for each keyword, the encrypted IDs of the documents that contain it (while hiding the number of documents matching each keyword), resulting in complexity proportional to the number of matching results, even for searching the whole document collection. However, \cite{curtmola2011searchable} does not support multiple keyword conjunctive queries efficiently; it has complexity proportional to the number of documents matching the most frequent queried keyword. 
+Later, \cite{cash2013highly} presented the OXT protocol, extending \cite{curtmola2011searchable} by adding a `Cross-Tag Set' (XSet) data structure, which lists hashed pairs of keywords and IDs of documents containing them, and reducing search complexity to be proportional to the number of results matching the least frequent queried keyword.
 
-{\bf Security Definition and Leakage of SSE:} The studies of SSE security definition started from \cite{goh2003secure}, their definition can make sure that adversaries can not deduct document's content from its index, but it doesn't consider the security of search tokens (trapdoors for searching) However, Curtmola et al. \cite{curtmola2011searchable} pointed out that the security of indexes and the security of trapdoors are inherently linked. In his definition, a SSE is secure if it reveals any information about the documents and the indexes besides the outcome and the pattern of the searches. Chase and Kamara \cite{chase2010structured} extended their definition to more general structured encryption, as SSE is only a special case of structured encryption search.
+{\bf Security Definition and Leakage of SSE:} The studies of SSE security definition started from \cite{goh2003secure}, their definition can make sure that adversaries can not deduct document's content from its index, but it doesn't consider the security of search tokens (trapdoors for searching) 
+However, Curtmola et al. \cite{curtmola2011searchable} pointed out that the security of indexes and the security of trapdoors are inherently linked. In his definition, a SSE is secure if it reveals any information about the documents and the indexes besides the outcome and the pattern of the searches. 
+Chase and Kamara \cite{chase2010structured} extended their definition to more general structured encryption, as SSE is only a special case of structured encryption search.
 
 Oblivious RAM (ORAM) allows SSE with no leakage \cite{goldreich1996software}. However, it requires communication rounds and search complexity poly-logarithmic in the database size.To balance the efficiency and security of SSE, almost all of the practical schemes leak information about documents based on current security definition.
 
 \subsection{Public Key Searchable Encryption}
-SE protocols have also been studied extensively in the public key setting. Such protocols allow any user with the public key to insert data but only allow the user with the private key to search. The use of public key cryptography makes the protocols less efficient than SSE, but allows more powerful functionality and/or better security properties. The first such protocol was proposed by \cite{boneh2004public} as a generalisation of anonymous Identity-Based Encryption (IBE), and supporting equality queries. It was significantly further generalised in \cite{boneh2007conjunctive} to HVE, applied to conjunctive, subset and range searchable encryption queries. However, public key setting is not suit for Graph Search, because the graph is generated by a sole information source (OSN provider), and the source is untrusted, it is meaningless to let an untrusted party to do encryption.
+SE protocols have also been studied extensively in the public key setting. Such protocols allow any user with the public key to insert data but only allow the user with the private key to search. The use of public key cryptography makes the protocols less efficient than SSE, but allows more powerful functionality and/or better security properties. 
+The first such protocol was proposed by \cite{boneh2004public} as a generalisation of anonymous Identity-Based Encryption (IBE), and supporting equality queries. It was significantly further generalised in \cite{boneh2007conjunctive} to HVE, applied to conjunctive, subset and range searchable encryption queries. 
+However, public key setting is not suit for Graph Search, because the graph is generated by a sole information source (OSN provider), and the source is untrusted, it is meaningless to let an untrusted party to do encryption.
 
 \subsection{Searchable Encryption on Graph}
-The notion of Graph Encryption was introduced in \cite{chase2010structured} as a special case of structured encryption. But not like SSE which is also a sub-category of structured encryption search, the researches about Searchable Graph Encryption are very limited: In \cite{chase2010structured}, several constructions were proposed to answer Adjacency Queries (give two nodes, do they have a common edge?), Neighbour Queries (get all nodes will a common edge) and Labeled Graph Queries (search graph with some labels in nodes) in encrypted graph.
+The notion of Graph Encryption was introduced in \cite{chase2010structured} as a special case of structured encryption. But not like SSE which is also a sub-category of structured encryption search, the researches about Searchable Graph Encryption are very limited.
+In \cite{chase2010structured}, several constructions were proposed to answer Adjacency Queries (give two nodes, do they have a common edge?), Neighbour Queries (get all nodes will a common edge) and Labeled Graph Queries (search graph with some labels in nodes) in encrypted graph.
 
 Meng et al. \cite{meng2015grecs} proposed graph encryption schemes that support shortest distance query on graph encryption. Their construction is based on distance oracle instead of Dijkstra's algorithm so their algorithm can only get an approximation of shortest distance but enabling them to search efficiently on a large-scale graph.
 
