--- a/data/progress.tex
+++ b/data/progress.tex
@@ -6,7 +6,7 @@ Currently the implementation of this scheme in a distributed environment is fini
 
 The paper of HXT is writing in progress, we will test the HXT protocol in a larger dataset as a supplementary result for its efficiency in large scale database. We plan to submit this paper to IEEE S\&P by 1st Dec.
 
-The HXT is more secure than previous SSE schemes that support boolean query functions, and it is also indexed by inverted index. Hence, HXT can serve as a building block of my Searchable Graph Encryption by providing secure and efficient boolean query functions.
+HXT is a more secure SSE protocol that support boolean query functions, and it is also indexed by inverted index. Hence, HXT can serve as a building block of my Searchable Graph Encryption by providing secure and efficient boolean query functions.
 
 \section{Courseworks}
 To meet the coursework requirements, I've get exemption for one compulsory module and attend another one as well as the compulsory events and workshops in FIT 5144 in the first year. However, there are some issues with my grades in FIT6021 module ``Modelling and Computer Simulation''. Table \ref{tlb:coursework} shows the detailed information about my coursework activities. 
@@ -42,3 +42,9 @@ To meet the coursework requirements, I've get exemption for one compulsory modul
 \end{table}
 
 Apart from the compulsory 58 hours' events and workshops listed above, I also attend GSAS Oral Presentations Workshops, Preparing for Confirmation Workshops; The Data61 reading group; Dean's Seminar Series; Staff Appointment Seminar in FIT as elective activities to fulfil the requirement of 120 hours activities attending record for FIT5144.
+
+
+\chapter{Timeline to Completion}
+\begin{figure}[h]
+\includegraphics[width=\textwidth]{timeline.pdf}
+\end{figure}
